kube/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgress-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgress-db
  template:
    metadata:
      labels:
        app: postgress-db
    spec:
      containers:
        - name: postgress-container
          image: postgres
          ports:
            - containerPort: 5432
          imagePullPolicy: Always
          #specifies an environment variable
---
#service config
apiVersion: v1
kind: Service
metadata:
  name: postgress-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: postgress-db
  ports:
    - port: 5432
      targetPort: 5432
