kube/springboot-kube.yaml
#deployment config
apiVersion: apps/v1
kind: Deployment
metadata:
  #deployment name
  name: springboot-demo
spec:
  #number of replicas needed for the app
  replicas: 3
  #selector to be used while deploying the pod
  selector:
    #match based on the label, deployment object use this to match with the pod
    #basically to control the lifecycle of the pod, it needs an identifier
    matchLabels:
      app: springboot-kube
  template:
    metadata:
      #defines a label for the pod, which later can be used to match via selector
      labels:
        app: springboot-kube
    spec:
      #definition of the container
      containers:
        #container name
        - name: springboot-kube
          #image name from docker registry
          image: h1326733/spingboot-kube
          ports:
            - containerPort: 8080
          # always pull the latest image
          imagePullPolicy: Always

---
#Service Config

apiVersion: v1
kind: Service
metadata:
  name: springboot-demo-service
spec:
  #expose all the pods with the label of app:springboot-kube
  selector:
    app: springboot-kube
  ports:
    #port for the outside world
    - port: 8082
      #should match with the container port
      targetPort: 8080
  #make sure to manage traffic, if one pod is down, it will re-route the traffic to other pods
  #type: LoadBalancer
  #this type of the object is used to be accessed by other objects mainly Ingress Server
  type: ClusterIP
